@@ -35,6 +35,7 @@ import org.chromium.chrome.browser.tab.Tab;
 import org.chromium.chrome.browser.tab.TabSelectionType;
 import org.chromium.chrome.browser.tab.TabState;
 import org.chromium.chrome.browser.tab.TabStateExtractor;
+import org.chromium.chrome.browser.tabmodel.TabClosureParams;
 import org.chromium.chrome.browser.tabmodel.TabList;
 import org.chromium.chrome.browser.tabmodel.TabModel;
 import org.chromium.chrome.browser.tabmodel.TabModelFilter;
@@ -141,8 +142,8 @@ public class RecentlyClosedBridgeTest {
                 () -> {
                     titles[0] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
-                    mTabModel.closeTab(tabB);
-                    mTabModel.closeTab(tabA, false, true);
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabB).allowUndo(false).build());
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).build());
                     mTabModel.commitTabClosure(tabA.getId());
                 });
 
@@ -192,8 +193,8 @@ public class RecentlyClosedBridgeTest {
                     mTabModel.setIndex(mTabModel.indexOf(tabC), TabSelectionType.FROM_USER);
                     titles[0] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
-                    mTabModel.closeTab(tabB);
-                    mTabModel.closeTab(tabA);
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabB).allowUndo(false).build());
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).allowUndo(false).build());
                 });
 
         final List<RecentlyClosedTab> recentTabs = new ArrayList<>();
@@ -257,7 +258,8 @@ public class RecentlyClosedBridgeTest {
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     titles[0] = frozenTabA.getTitle();
-                    mTabModel.closeTab(frozenTabA);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTab(frozenTabA).allowUndo(false).build());
                 });
 
         final List<RecentlyClosedTab> recentTabs = new ArrayList<>();
@@ -306,7 +308,7 @@ public class RecentlyClosedBridgeTest {
                 () -> {
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabModel.closeAllTabs();
+                    mTabModel.closeTabs(TabClosureParams.closeAllTabs().build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -357,7 +359,10 @@ public class RecentlyClosedBridgeTest {
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -416,7 +421,11 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titles[0] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabB, tabA}), false);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabB, tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -482,8 +491,8 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titleA[0] = tabA.getTitle();
                     titleB[0] = tabB.getTitle();
-                    mTabModel.closeTab(tabB, false, true);
-                    mTabModel.closeTab(tabA, false, true);
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabB).build());
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -552,7 +561,10 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitTabClosure(tabA.getId());
                     mTabModel.commitTabClosure(tabB.getId());
                 });
@@ -605,7 +617,10 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitTabClosure(tabA.getId());
                     mTabModel.commitTabClosure(tabB.getId());
                 });
@@ -658,7 +673,11 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB}), false);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -720,7 +739,11 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[1] = tabA.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabC}), false);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabC))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -776,7 +799,10 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[1] = tabA.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabC}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitTabClosure(tabA.getId());
                     mTabModel.commitTabClosure(tabC.getId());
                 });
@@ -831,7 +857,8 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[0] = tabA.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA)).hideTabGroups(true).build());
                     mTabModel.commitTabClosure(tabA.getId());
                 });
 
@@ -876,7 +903,11 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.createSingleTabGroup(tabA, /* notify= */ false);
                     mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[0] = tabA.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA}), false);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -925,7 +956,8 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.createSingleTabGroup(tabA, /* notify= */ false);
                     mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[0] = tabA.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA)).hideTabGroups(true).build());
                     mTabModel.commitTabClosure(tabA.getId());
                 });
 
@@ -976,10 +1008,8 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.createSingleTabGroup(tabA, /* notify= */ false);
                     mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[0] = tabA.getTitle();
-                    mTabGroupModelFilter.closeMultipleTabs(
-                            Arrays.asList(new Tab[] {tabA}),
-                            /* canUndo= */ true,
-                            /* hideTabGroups= */ true);
+                    mTabGroupModelFilter.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA)).hideTabGroups(true).build());
                     mTabModel.commitTabClosure(tabA.getId());
                 });
 
@@ -1005,10 +1035,11 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.createSingleTabGroup(tabA, /* notify= */ false);
                     mTabGroupModelFilter.setTabGroupTitle(tabA.getId(), "Bar");
                     titles[0] = tabA.getTitle();
-                    mTabGroupModelFilter.closeMultipleTabs(
-                            Arrays.asList(new Tab[] {tabA}),
-                            /* canUndo= */ false,
-                            /* hideTabGroups= */ true);
+                    mTabGroupModelFilter.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -1040,7 +1071,11 @@ public class RecentlyClosedBridgeTest {
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), false);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -1136,7 +1171,10 @@ public class RecentlyClosedBridgeTest {
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -1191,7 +1229,10 @@ public class RecentlyClosedBridgeTest {
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -1257,8 +1298,11 @@ public class RecentlyClosedBridgeTest {
                     title[0] = tabA.getTitle();
                     groupTitles[1] = tabB.getTitle();
                     groupTitles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabB, tabC}), true);
-                    mTabModel.closeTab(tabA, false, true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).build());
                     mTabModel.commitTabClosure(tabB.getId());
                     mTabModel.commitTabClosure(tabA.getId());
                     mTabModel.commitTabClosure(tabC.getId());
@@ -1344,7 +1388,10 @@ public class RecentlyClosedBridgeTest {
                     titles[2] = tabA.getTitle();
                     titles[1] = tabB.getTitle();
                     titles[0] = tabC.getTitle();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB, tabC}), true);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB, tabC))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -1399,10 +1446,12 @@ public class RecentlyClosedBridgeTest {
                 () -> {
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabModel.closeMultipleTabs(
-                            Arrays.asList(tabB, tabA),
-                            /* canUndo= */ false,
-                            /* canRestore= */ false);
+                    mTabModel.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabB, tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .saveToTabRestoreService(false)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
 
@@ -1428,11 +1477,12 @@ public class RecentlyClosedBridgeTest {
                     mTabGroupModelFilter.mergeTabsToGroup(tabB.getId(), tabA.getId());
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabGroupModelFilter.closeMultipleTabs(
-                            Arrays.asList(tabB, tabA),
-                            /* canUndo= */ false,
-                            /* hideTabGroups= */ true,
-                            /* canRestore= */ false);
+                    mTabGroupModelFilter.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabB, tabA))
+                                    .allowUndo(false)
+                                    .hideTabGroups(true)
+                                    .saveToTabRestoreService(false)
+                                    .build());
                 });
 
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -1452,7 +1502,7 @@ public class RecentlyClosedBridgeTest {
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     titles[0] = tabA.getTitle();
-                    mTabModel.closeTab(tabA, false, true);
+                    mTabModel.closeTabs(TabClosureParams.closeTab(tabA).build());
                     mTabModel.commitTabClosure(tabA.getId());
                 });
         final List<RecentlyClosedEntry> recentEntries = new ArrayList();
@@ -1488,7 +1538,7 @@ public class RecentlyClosedBridgeTest {
                 () -> {
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
-                    mTabModel.closeAllTabs(/* uponExit= */ false);
+                    mTabModel.closeTabs(TabClosureParams.closeAllTabs().build());
                     mTabModel.commitAllTabClosures();
                 });
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -1528,7 +1578,10 @@ public class RecentlyClosedBridgeTest {
                     titles[1] = tabA.getTitle();
                     titles[0] = tabB.getTitle();
                     tabCountBeforeClosingTabs[0] = mTabModel.getCount();
-                    mTabModel.closeMultipleTabs(Arrays.asList(new Tab[] {tabA, tabB}), true);
+                    mTabGroupModelFilter.closeTabs(
+                            TabClosureParams.closeTabs(List.of(tabA, tabB))
+                                    .hideTabGroups(true)
+                                    .build());
                     mTabModel.commitAllTabClosures();
                 });
         final List<RecentlyClosedEntry> recentEntries = new ArrayList<>();
@@ -1571,7 +1624,9 @@ public class RecentlyClosedBridgeTest {
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
                     TabState state = TabStateExtractor.from(tab);
-                    mActivity.getCurrentTabModel().closeTab(tab);
+                    mActivity
+                            .getCurrentTabModel()
+                            .closeTabs(TabClosureParams.closeTab(tab).allowUndo(false).build());
                     frozen[0] =
                             mActivity.getCurrentTabCreator().createFrozenTab(state, tab.getId(), 1);
                 });
